# tRIG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cpp-build-and-test.yml
Common/: CMakeLists.txt
Common/Export/: rigtransport_inprocess.h  rigtransport_inprocess_server.h
Common/Source/: InProcessTransport.cpp
Common/Tests/: CMakeLists.txt  CommonInProcessTests.cpp
Cpp/: CMakeLists.txt
Cpp/Export/Rig/Transport/Client/: Transport.h
Cpp/Export/Rig/Transport/Server/: Transport.h
Cpp/Interface/Rig/Transport/: Exception.h  IBuffer.h
Cpp/Interface/Rig/Transport/Client/: ITransport.h  ITransportFactory.h
Cpp/Interface/Rig/Transport/Server/: Function.h  ITransport.h  ITransportFactory.h
Cpp/Libs/: CMakeLists.txt
Cpp/Libs/InProcess/: CMakeLists.txt
Cpp/Libs/InProcess/Include/Rig/Transport/InProcess/: ClientTransport.h  ServerTransport.h
Cpp/Libs/InProcess/Source/: ClientTransport.cpp  ServerTransport.cpp
Cpp/Source/: Client.cpp  Server.cpp  TransportFactory.h
Cpp/Tests/: CMakeLists.txt  InProcTests.cpp
